Deploy-Yolo-Poly/PolyBotDev/polybot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: polybot-dev
  labels:
    app: polybot-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: polybot-dev
  template:
    metadata:
      labels:
        app: polybot-dev
    spec:
      containers:
        - name: polybot
          image: mohammadjabaren/polybot-dev:31
          imagePullPolicy: Always
          ports:
            - containerPort: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: polybot-dev-service
  namespace: dev
spec:
  selector:
    app: polybot-dev
  ports:
    - name: https
      port: 8443
      targetPort: 8443
  type: ClusterIP
