Deploy-Yolo-Poly/PolyBotDev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: polybot-dev-ingress
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: jabaren.dev.fursa.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: polybot-dev-service
                port:
                  number: 8443
